--- a/markdown_ethan_test.Rmd
+++ b/markdown_ethan_test.Rmd
@@ -1,30 +1,70 @@
 ---
-title: "Hello R Markdown"
-author: "Marguerite"
-date: "2020-01-14"
+title: "Ethan's Iris Analysis in RMarkdown"
+author: "Ethan Hill"
+date: "2020-01-16"
 output: html_document
 ---
 
-This is a text paragraph in an R Markdown document.
+Hello! Here are the plots and the code for the plots I have generated with the Iris dataset. I have also gone ahead and included the workflow I used to get the final plots...
 
-Below is working R code in a code chunk: 
+
+It is always a good habit to set your working directory:
+
+```{r}
+setwd("C:/Users/hille/Documents/Rbootcamp_S2020/Iris-repo/")
+```
+
+
+Next, I've scrambled the iris dataset (gotta make it harder) and stored the scrambled data into the object called mix:
 
 ```{r}
 oo <- sample(x=1:150, 150, replace=FALSE)
 mix <- iris[oo,]
+```
 
-species2 <- mix$Species
+
+Once I have the scrambled data stored in the object called "mix" I can store each of the columns as a seperate vector:
+
+```{r}
+species <- iris$Species   
+petalL <- iris$Petal.Length
+petalW <- iris$Petal.Width
+sepalL <- iris$Sepal.Length
+sepalW <- iris$Sepal.Width
+```
+
+
+Now that I have each of the columns stored as seperate vectors, I can take the species vector and assign each species its own unique color:
+
+```{r}
+species2 <- species
 color2 <- rep("red", 150)
 species2 == "setosa"
 color2[species2 == "setosa"] <- "purple"
 color2
 color2[species2 == "versicolor"] <- "blue"
 color2
-color2[species2 == "virginica"] <- "green"
+color2[species2 == "virginica"] <- "orange"
 color2
-
-plot(mix$Petal.Length, mix$Petal.Width, cex=1, pch=19, col=color2, xlab = "Petal Length", ylab = "Petal Width")
-legend('bottomright', legend = levels(iris$Species), col = c("purple", "blue", "green"), cex = 1, pch = 19)
 ```
 
-This is a scatter plot for 
+Cool, Now we can start doing some real analyses. 
+I have have made a best fit line of regression for Sepel Width as a function of Petal Length and have displayed the output stats:
+
+```{r}
+sepalW.lm <- lm(sepalW ~ petalL)
+sepalW.lm
+```
+
+
+This is a scatter plot for "Petal Length vs Petal Width" with a line of best fit.
+```{r}
+plot(petalL, sepalW, col=color2, cex=1.5, pch=19, xlab="Petal Length", ylab="Sepal Width")
+abline(sepalW.lm, col="black")
+legend('top', legend = levels(species), col = c("purple", "blue", "orange"), cex = .8, pch = 19)
+```
+
+As we can see from the graph above, the general trend for all species is that as petal length increases, the sepal width decreases. However, it appears that within species as petal length increases, the sepal width also increases.
+
+And this will conclude my simple anaylsis of the iris dataset!
+
