--- a/markdown_ethan_test.Rmd
+++ b/markdown_ethan_test.Rmd
@@ -69,22 +69,43 @@ As we can see from the graph above, the "general" trend is that as petal length 
 BUT WAIT THERE'S MORE!!!!
 
 
-We can also index the iris dataset by species and make a regression line for Sepel Width as a function of Petal Length FOR EACH SPECIES:
+We can also index the iris dataset by species and make a regression line for Sepel Width as a function of Petal Length FOR EACH SPECIES and we can ALSO calcuate error for the linear regression FOR EACH SPECIES:
 ```{r]
 setosa <- mix[mix$Species == "setosa",]
 setosa
 setosaPLvsSW.lm <- lm(setosa$Sepal.Width ~ setosa$Petal.Length)
 setosaPLvsSW.lm
+b.setosa <- coef(setosaPLvsSW.lm)
+int.setosa <- b.setosa[1]
+slope.setosa <- b.setosa[2]
+yhat.setosa <- slope.setosa*setosa$Petal.Length+int.setosa
+yhat.setosa
+error.setosa.sepalW <- setosa$Sepal.Width-yhat.setosa
+error.setosa.sepalW
 
 versicolor <- mix[mix$Species == "versicolor",]
 versicolor
 versicolorPLvsSW.lm <- lm(versicolor$Sepal.Width ~ versicolor$Petal.Length)
 versicolorPLvsSW.lm
+b.versicolor <- coef(versicolorPLvsSW.lm)
+int.versicolor <- b.versicolor[1]
+slope.versicolor <- b.versicolor[2]
+yhat.versicolor <- slope.versicolor*versicolor$Petal.Length+int.versicolor
+yhat.versicolor
+error.versicolor.sepalW <- versicolor$Sepal.Width-yhat.versicolor
+error.versicolor.sepalW
 
 virginica <- mix[mix$Species == "virginica",]
 virginica
 virginicaPLvsSW.lm <- lm(virginica$Sepal.Width ~ virginica$Petal.Length)
 virginicaPLvsSW.lm
+b.virginica <- coef(virginicaPLvsSW.lm)
+int.virginica <- b.virginica[1]
+slope.virginica <- b.virginica[2]
+yhat.virginica <- slope.virginica*virginica$Petal.Length+int.virginica
+yhat.virginica
+error.virginica.sepalW <- virginica$Sepal.Width-yhat.virginica
+error.virginica.sepalW
 ```
 
 THEN WE CAN PLOT THE DATA AGAIN WITH EACH SPECIES HAVING THEIR OWN LINE OF REGRESSION:
